--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "php": ">=5.3.0",
     "pagon/fiber": "*"
   },
+  "require-dev": {
+    "phpunit/phpunit": "3.7.*"
+  },
   "autoload": {
     "psr-0": {
       "Pagon\\Logger": "lib/"
